@@ -1,6 +1,6 @@
 Package: gap
 Version: 1.2.2
-Date: 2019-6-18
+Date: 2019-6-25
 Title: Genetic Analysis Package
 Author: Jing Hua Zhao and colleagues with inputs from Kurt Hornik and
         Brian Ripley
@@ -11,7 +11,7 @@ Depends: R (>= 2.10)
 Suggests: BradleyTerry2, MASS, Matrix, MCMCglmm, R2jags, bdsmatrix,
         calibrate, circlize, coda, coxme, dplyr, foreign, forestplot,
         gap.datasets, grid, haplo.stats, kinship2, lattice, 
-        magic, meta, mets, nlme, pedigree, pedigreemm, plotrix,
+        magic, matrixStats, meta, mets, nlme, pedigree, pedigreemm, plotrix,
         qqman, regress, reshape, rmeta, rms, survival
 LazyData: Yes
 LazyLoad: Yes
