@@ -73,6 +73,7 @@ The following list shows the data and functions currently available.
 AE3               &      AE model using nuclear family trios\\
 bt                &      Bradley-Terry model for contingency table\\
 ccsize            &      Power and sample size for case-cohort design\\
+cs                &      Credibel set\\
 fbsize            &      Sample size for family-based linkage and association design\\
 gc.em             &      Gene counting for haplotype analysis\\
 gcontrol          &      genomic control\\
