@@ -1,6 +1,7 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.2.2
+25-06-2019	Add cs and suggest matrixStats
 18-06-2019	Add logp and variance explained for sentinels.Rd
 12-06-2019	Add z = option to mhtplot.trunc to handle P value = 0
 		Change sentinels.R for names other than "Chrom", "End", "MarkerName", "Effect", "StdErr"
